# regex-grammar

./: pyproject.toml
examples/: iso8601.rg  simple-bcp47.rg
regex_grammar/: __init__.py  __main__.py  main.py  parser.py  parser_wrapper.py  regex.gram  syntax.py
tests/: lib.py  test_iso8601.py  test_lang.py
